--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -10,24 +10,25 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="338.0" prefWidth="515.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="338.0" prefWidth="395.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <AnchorPane prefHeight="338.0" prefWidth="209.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="306.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="apOverview" prefHeight="338.0" prefWidth="248.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="147.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="ivOverview" fitHeight="185.0" fitWidth="200.0" layoutX="5.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="lbName" alignment="CENTER" layoutX="5.0" layoutY="222.0" prefHeight="17.0" prefWidth="200.0" text="Label" textAlignment="CENTER" />
-            <Label fx:id="lbID" layoutX="139.0" layoutY="-1.0" prefHeight="24.0" prefWidth="69.0" text="ID" textAlignment="CENTER" />
-            <Label fx:id="lbLife" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="251.0" prefHeight="44.0" prefWidth="173.0" text="Label" textAlignment="CENTER" textOverrun="CLIP">
+            <ImageView fx:id="ivOverview" fitHeight="208.0" fitWidth="237.0" layoutX="6.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="lbName" alignment="CENTER" layoutX="25.0" layoutY="238.0" prefHeight="17.0" prefWidth="200.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="lbID" layoutX="91.0" layoutY="2.0" prefHeight="24.0" prefWidth="69.0" text="ID" textAlignment="CENTER" />
+            <Label fx:id="lbLife" alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" layoutY="255.0" prefHeight="44.0" prefWidth="173.0" text="Label" textAlignment="CENTER" textOverrun="CLIP">
                <font>
                   <Font size="37.0" />
                </font>
             </Label>
+            <Button fx:id="btRefrescar" layoutX="185.0" layoutY="2.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="52.0" text="Refrescar" />
+            <Button fx:id="btSalir" layoutX="12.0" layoutY="2.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="52.0" text="Salir" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="259.0" prefHeight="338.0" prefWidth="256.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="259.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ListView fx:id="lvPokemons" prefHeight="344.0" prefWidth="263.0" />
+            <ListView fx:id="lvPokemons" prefHeight="338.0" prefWidth="137.0" />
          </children>
       </AnchorPane>
    </children>
